# medallion-lakehouse-pipeline

./: Makefile  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
bronze/: bronze_loader.py
dbt_project/: dbt_project.yml
dbt_project/models/marts/: agg_daily_zone_summary.sql  fact_trips.sql
dbt_project/models/staging/: stg_trips.sql
orchestration/dags/: medallion_pipeline_dag.py
silver/: scd2_handler.py  silver_transformer.py
tests/unit/: test_silver_transformer.py
utils/: __init__.py:Zone.Identifier  delta_utils.py  spark_session.py
